fix overlap issue

--- a/public/layouts/wiki.css
+++ b/public/layouts/wiki.css
@@ -89,8 +89,9 @@ body {
 	font-weight: bold;
 	opacity: 0.95;
 	width: 100%;
-	border-bottom-width: 1px
+	border-bottom-width: 1px;
 	border-bottom-style: solid;
+	z-index: 1;
 }
 
 #content_top .filesize {
